--- a/templates/template_1.html
+++ b/templates/template_1.html
@@ -4,14 +4,24 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="static/CSS/style.css">
+    <link rel="stylesheet" href="static/CSS/fontawsome/all.css">
+
     <script src="static/javascript/jquery-3.5.1.js"></script>
+    <script src="static/javascript/socket.io.js"></script>
+
     <script type="text/javascript">
+
+    const FPS = {{fps}};
+
     const bgImg = new Image(); // Create new img element
     const aImg = new Image();
     const planesImg = new Image();
-    bgImg.src = "static/background_placeholder.png";
-    aImg.src = "static/background_placeholder_analysis.png"
-    planesImg.src = "static/standardplanes.png";
+    const feed = new Image();
+    feed.src = "{{ url_for('video_feed') }}"
+    bgImg.src = "static/placeholder_images/background_placeholder.png";
+    aImg.src = "static/placeholder_images/background_placeholder_analysis.png"
+    planesImg.src = "static/placeholder_images/standardplanes.png";
+
     </script>
     <script
     src="static/javascript/template_1.js">
@@ -25,38 +35,58 @@
       <div class="row" id="row">
         <div class="col1">
           <div class="col-lg-8  offset-lg-2">
-              <canvas id="imgCanvas" height="480px" width="640px"></canvas>
-              <img id="feed"src="{{ url_for('video_feed') }}" hidden>
+              <canvas id="imgCanvas" width="640px" height="480px"></canvas>
+              <!--<img id="feed"src="{{ url_for('video_feed') }}" hidden>-->
               <img id ="mask"src="static\image-from-rawpixel-id-2343269-png.png" hidden>
               <!--<img src="" id="canImg">-->
               <!--<canvas id="canvas"></canvas>-->
               <!--<canvas id="canvas_draw" ></canvas>-->
+              <canvas id="socketCanvas" hidden></canvas>
           </div>
         </div>
         <div class="col2">
-          <form id="imgCap" method="post" enctype="multipart/form-data">
-            <input type="hidden" name="imageCap" id="imageCap" value="">
-            <button type="submit" id="button" name="button1" onclick="get_img()">capture image</button>
-          </form>
+
+
+
+            <button type="button" id="button" name="button1" onclick="get_img()">capture image</button>
+
+
+          <p class="expert"><b>Expert mode:</b><input type="checkbox" id="expert" name="expert"></p>
+
           <canvas id="Canvasplanes" width="300" height="300"></canvas>
+
         </div>
       </div>
       <div class="row" id="row2">
         <div class="col1">
-          <canvas id="canvas_draw" height="480px" width="640px"></canvas>
+          <canvas id="canvas_draw"  width="640px" height="480px"></canvas>
           <!--<button type="button" id="button2" name="button2" onclick="applyMask()" >Apply Mask</button>-->
         </div>
 
         <div class="col2">
-          <div class="textBox_container">
-            <h3 class="res">Results:</h3>
-            <p><b>Image Quality:</b><input type="text" name="" id="imgQ" value="" style="background-color:#F75151;" disabled></p>
+          <div id="expert_box" class="anomaly">
+            <p><b>Anomaly:</b><input type="text" name="" value="None" id="anomaly"disabled></p>
+            <p><b>Disease detected:</b><input type="text" name="" value="None" id="disease"disabled></p>
+
+          </div>
+          <div id="res_box"class="textBox_container">
+            <button type="button" name="button" id="res_btn" onclick="show_hide(0)">Hide results <i class="fa-solid fa-minus"></i></button>
+            <div class="result_div" id="res_div">
+            <!--<h3 class="res">Results:</h3>-->
+            <p style="padding-top:1px" ><b>Image Quality:</b><input type="text" name="" id="imgQ" value="" disabled></p>
             <p><b>Detection label</b><input type="text" name="" value="" id="SS" disabled></p>
             <p><b>Abdominal planes:</b><input type="text" name="" id="abdom" value="97%" disabled></p>
             <p><b>Head detected:</b><input type="text" name="" value="17%" id="headD" disabled></p>
             <p><b>Confidence:</b><input type="text" name="" value="58%" id="SD"disabled></p>
+            <p><b>Anomaly detected:</b><input type="text" name="" value="None" id="anomaly"disabled></p>
+            <p><b>Disease detected:</b><input type="text" name="" value="None" id="disease"disabled></p>
+            <br>
           </div>
-          <div class="textBox_container">
+
+          </div>
+          <div id="desc_box" class="textBox_container">
+            <button type="button" name="button" id="desc_btn" onclick="show_hide(1)">Hide description <i class="fa-solid fa-minus"></i></i></button>
+            <div class="describtion_div" id="desc_div">
             <h3 class="res">Describing text:</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -67,6 +97,7 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
+            </div>
           </div>
         </div>
       </div>
@@ -75,27 +106,7 @@
 
 </body>
 <script type="text/javascript">
-var video = document.createElement('video');
-video.setAttribute('id','video')
-video.setAttribute('autoplay', '');
-video.setAttribute('muted', '');
-video.setAttribute('playsinline', '');
-document.body.appendChild(video);
-var constraints = {
-audio: false,
-video: {
-  width: { ideal: 1280 },
-  height: { ideal: 720 },
-  facingMode: 'environments'
-}
-};
-navigator.mediaDevices.getUserMedia(constraints)
-.then(function(stream) {
-  video.srcObject = stream;
-})
-.catch(function(error) {
-  console.error('getUserMedia() error: ', error);
-});
+
 </script>
 
 </html>
