--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,20 @@
 <html>
-<link rel="stylesheet" href="static\style.css">
+<link rel="stylesheet" href="static/CSS/style.css">
 
 <head>
 </head>
 
 <body>
 <div class="container">
+
 <a href="/template_1"><button type="button" name="button">template_1</button></a>
 <a href="/template_2"><button type="button" name="button">template_2</button></a>
 <a href="/template_3"><button type="button" name="button">template_3</button></a>
+
+
+<br>
+<br>
+
 </div>
 </body>
 
