--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 <a href="/template_1"><button type="button" name="button">template_1</button></a>
 <a href="/template_2"><button type="button" name="button">template_2</button></a>
 <a href="/template_3"><button type="button" name="button">template_3</button></a>
+<a href="/template_4"><button type="button" name="button">template_4</button></a>
 
 
 <br>
