--- a/templates/template_1.html
+++ b/templates/template_1.html
@@ -37,7 +37,7 @@
           <div class="col-lg-8  offset-lg-2">
               <canvas id="imgCanvas" width="640px" height="480px"></canvas>
               <!--<img id="feed"src="{{ url_for('video_feed') }}" hidden>-->
-              <img id ="mask"src="static\image-from-rawpixel-id-2343269-png.png" hidden>
+              <img id ="mask"src="static/placeholder_images/image-from-rawpixel-id-2343269-png.png" hidden>
               <!--<img src="" id="canImg">-->
               <!--<canvas id="canvas"></canvas>-->
               <!--<canvas id="canvas_draw" ></canvas>-->
