--- a/templates/template_2.html
+++ b/templates/template_2.html
@@ -1,46 +1,121 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+
+
     <title></title>
-    <link rel="stylesheet" href="static\CSS\style.css">
+    <link rel="stylesheet" href="static/CSS/style.css">
+    <link rel="stylesheet" href="static/CSS/fontawsome/all.css">
+
+    <script src="static/javascript/jquery-3.5.1.js"></script>
+    <script type="text/javascript">
+    const bgImg = new Image(); // Create new img element
+    const aImg = new Image();
+    const planesImg = new Image();
+    bgImg.src = "static/placeholder_images/background_placeholder.png";
+    aImg.src = "static/placeholder_images/background_placeholder_analysis.png"
+    planesImg.src = "static/placeholder_images/standardplanes.png";
+    </script>
+    <script src="static/javascript/template_2.js">    </script>
+    <script src="static/javascript/socket.io.js">
+
+    </script>
+    <script type="text/javascript">
+
+
+      var socket = io();
+
+      socket.on('nextimg', function(msg){
+        console.log('recieved: '+msg.value);
+        change(msg);
+        setTimeout(function() {
+          draw_frozen_image();
+        }, 100);
+      })
+
+      function disconnect(){
+        socket.emit('stop')
+      }
+    </script>
 
   </head>
   <body>
-
-    <div class="container">
-        <div class="row" id="row" draggable="true">
-
-            <div class="col-lg-8  offset-lg-2" draggable="true">
-                <h3 class="mt-5">Live Feed</h3>
-                <canvas id="imgCanvas" hidden></canvas>
-                <img id="feed"src="{{imgpath}}" draggable="true">
-                <canvas id="canvas" draggable="true"></canvas>
-                <canvas id="canvas_draw" >draggable="true"</canvas>
-            </div>
-            <form id="imgCap" method="post" enctype="multipart/form-data" draggable="true">
-              <input type="hidden" name="imageCap" id="imageCap" value="">
-              <button type="submit" id="button" name="button1" onclick="get_img()">capture image</button>
-            </form>
-
-
-
-        </div>
-        <div class="row2" id="row2" draggable="true">
-          <h3 class="res">Results</h3>
-
-
-        <div class="textBox_container" draggable="true">
-          <p><b>image Quality:</b><input type="text" name="" id="imgQ" value="" style="background-color:green;" disabled></p>
-          <p><b>Abdominal planes:</b><input type="text" name="" id="abdom" value="97%" disabled></p>
-          <p><b>Head detected:</b><input type="text" name="" value="17%" id="headD" disabled></p>
-          <p><b>something detected:</b><input type="text" name="" value="58%" id="SD"disabled></p>
-          <p><b>something something:</b><input type="text" name="" value="0%" id="SS" disabled></p>
-
-
-        </div>
-        </div>
-
+    <div class="nav-bar">
+      <a class="home" href="/" onclick="disconnect()">Home</a>
     </div>
+  <div class="container">
+      <div class="row" id="row">
+        <div class="col1">
+          <div class="col-lg-8  offset-lg-2">
+              <canvas id="imgCanvas" height="480px" width="640px"></canvas>
+
+              <img id="frozen"src="" hidden>
+              <img id ="mask"src="static/placeholder_images/image-from-rawpixel-id-2343269-png.png" hidden>
+              <!--<img src="" id="canImg">-->
+              <!--<canvas id="canvas"></canvas>-->
+              <!--<canvas id="canvas_draw" ></canvas>-->
+              <canvas id="socketCanvas" hidden></canvas>
+
+          </div>
+        </div>
+        <div class="col2">
+
+
+
+          <p class="expert"><b>Expert mode:</b><input type="checkbox" id="expert" name="expert"></p>
+
+          <canvas id="Canvasplanes" width="300" height="300"></canvas>
+        </div>
+      </div>
+      <div class="row" id="row2">
+        <div class="col1">
+          <canvas id="canvas_draw" height="480px" width="640px"></canvas>
+          <!--<button type="button" id="button2" name="button2" onclick="applyMask()" >Apply Mask</button>-->
+        </div>
+
+        <div class="col2">
+          <div id="anomaly" class="anomaly">
+            <p><b>Anomaly:</b><input type="text" name="" value="None" id="anomaly"disabled></p>
+
+          </div>
+          <div id="res_box"class="textBox_container">
+            <button type="button" name="button" id="res_btn" onclick="show_hide(0)">Hide results <i class="fa-solid fa-minus"></i></button>
+            <div class="result_div" id="res_div">
+            <h3 class="res">Results:</h3>
+            <p><b>Image Quality:</b><input type="text" name="" id="imgQ" value="" style="background-color:#F75151;" disabled></p>
+            <p><b>Detection label</b><input type="text" name="" value="" id="SS" disabled></p>
+            <p><b>Abdominal planes:</b><input type="text" name="" id="abdom" value="97%" disabled></p>
+            <p><b>Head detected:</b><input type="text" name="" value="17%" id="headD" disabled></p>
+            <p><b>Confidence:</b><input type="text" name="" value="58%" id="SD"disabled></p>
+            <p><b>Anomaly:</b><input type="text" name="" value="None" id="anomaly"disabled></p>
+          </div>
+
+          </div>
+          <div id="desc_box" class="textBox_container">
+            <button type="button" name="button" id="desc_btn" onclick="show_hide(1)">Hide results <i class="fa-solid fa-minus"></i></i></button>
+            <div class="describtion_div" id="desc_div">
+            <h3 class="res">Describing text:</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </div>
+
 </body>
+
+
+
 </html>
