--- a/templates/template_3.html
+++ b/templates/template_3.html
@@ -6,12 +6,16 @@
 
 
     <title></title>
-    <link rel="stylesheet" href="static/CSS/style.css">
-    <link rel="stylesheet" href="static/CSS/fontawsome/all.css">
-
+    <!--<link rel="stylesheet" href="static/CSS/style.css">-->
     <script src="static/javascript/jquery-3.5.1.js"></script>
+
+    <link rel="stylesheet" href="static/CSS/fontawsome/all.css">
+    <link rel="stylesheet" href="static/CSS/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="static/CSS/Template3.css">
+    <script src="static/CSS/bootstrap/js/bootstrap.js">
+
+    </script>
     <script type="text/javascript">
-    const FPS = {{fps}};
     const bgImg = new Image(); // Create new img element
     const aImg = new Image();
     const planesImg = new Image();
@@ -24,7 +28,7 @@
 
     </script>
     <script type="text/javascript">
-
+      var frozen = new Image()
 
       var socket = io();
       socket.on('connect', function () {
@@ -45,63 +49,87 @@
     </script>
 
   </head>
-  <body>
-    <div class="nav-bar">
-      <a class="home" href="/" onclick="disconnect()">Home</a>
-    </div>
-  <div class="container">
-      <div class="row" id="row">
-        <div class="col1">
-          <div class="col-lg-8  offset-lg-2">
-              <canvas id="imgCanvas" height="480px" width="640px"></canvas>
+  <body class="bg-dark">
+    <nav class="navbar navbar-dark bg-secondary">
 
-              <img id="frozen"src="" hidden>
-              <img id ="mask"src="static\image-from-rawpixel-id-2343269-png.png" hidden>
+      <a class="navbar-brand" href="/" onclick="disconnect()">Home</a>
+    </nav>
+    <br>
+  <div class="container-fluid " >
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+
+              <canvas id="imgCanvas" width="640px" height="480px"></canvas>
+
+              <img id ="mask"src="static/placeholder_images/image-from-rawpixel-id-2343269-png.png" hidden>
               <!--<img src="" id="canImg">-->
               <!--<canvas id="canvas"></canvas>-->
               <!--<canvas id="canvas_draw" ></canvas>-->
               <canvas id="socketCanvas" hidden></canvas>
 
-          </div>
         </div>
-        <div class="col2">
+        <div class="col ">
+          <canvas id="canvas_draw" width="640px" height="480px"></canvas>
 
-
-
-          <p class="expert"><b>Expert mode:</b><input type="checkbox" id="expert" name="expert"></p>
-
-          <canvas id="Canvasplanes" width="300" height="300"></canvas>
         </div>
       </div>
-      <div class="row" id="row2">
-        <div class="col1">
-          <canvas id="canvas_draw" height="480px" width="640px"></canvas>
+      <div class="row">
+        <div class="col">
+          <div class="row">
+
+
+          <div class="col d-flex justify-content-center">
+            <canvas id="Canvasplanes" width="300" height="300"></canvas>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <p class="expert"><b>Expert mode:</b><input type="checkbox" id="expert" name="expert"></p>
+
+          </div>
+        </div>
           <!--<button type="button" id="button2" name="button2" onclick="applyMask()" >Apply Mask</button>-->
         </div>
 
-        <div class="col2">
-          <div id="anomaly" class="anomaly">
-            <p><b>Anomaly:</b><input type="text" name="" value="None" id="anomaly"disabled></p>
+        <div class="col ">
+          <div class="row ">
 
-          </div>
-          <div id="res_box"class="textBox_container">
-            <button type="button" name="button" id="res_btn" onclick="show_hide(0)">Hide results <i class="fa-solid fa-minus"></i></button>
-            <div class="result_div" id="res_div">
-            <h3 class="res">Results:</h3>
-            <p><b>Image Quality:</b><input type="text" name="" id="imgQ" value="" style="background-color:#F75151;" disabled></p>
-            <p><b>Detection label</b><input type="text" name="" value="" id="SS" disabled></p>
-            <p><b>Abdominal planes:</b><input type="text" name="" id="abdom" value="97%" disabled></p>
-            <p><b>Head detected:</b><input type="text" name="" value="17%" id="headD" disabled></p>
-            <p><b>Confidence:</b><input type="text" name="" value="58%" id="SD"disabled></p>
-            <p><b>Anomaly:</b><input type="text" name="" value="None" id="anomaly"disabled></p>
-          </div>
 
-          </div>
-          <div id="desc_box" class="textBox_container">
-            <button type="button" name="button" id="desc_btn" onclick="show_hide(1)">Hide results <i class="fa-solid fa-minus"></i></i></button>
-            <div class="describtion_div" id="desc_div">
-            <h3 class="res">Describing text:</h3>
-            <p>
+          <div id="res_box"class="col-sm-5"  >
+              <div class="card bg-secondary">
+                <div class="card-header bg-secondary" id="headingOne">
+                  <h5 class="mb-0">
+                  <button class="btn btn-secondary" type="button" data-toggle="collapse" id="res_btn" data-target="#res_div" aria-expanded="true" aria-controls="res_div" width="100%">Toggle results</button>
+                  </h5>
+                </div>
+                    <!--<button class="btn btn-secondary"type="button" name="button" id="res_btn" onclick="show_hide(0)">Hide results <i class="fa-solid fa-minus"></i></button>-->
+                <div class="result_div collapse multi-collapse " id="res_div">
+
+
+                  <!--<p><b></b></p><input type="text" name="" id="imgQ" value="" style="background-color:#F75151;" disabled>
+                  <p><b>Detection label</b></p><input type="text" name="" value="" id="SS" disabled>
+                  <p><b>Abdominal planes:</b></p><input type="text" name="" id="abdom" value="97%" disabled>
+                  <p><b>Head detected:</b></p><input type="text" name="" value="17%" id="headD" disabled>
+                  <p><b>Confidence:</b></p><input type="text" name="" value="58%" id="SD"disabled>
+                  <p><b>Anomaly:</b></p><input type="text" name="" value="None" id="anomaly"disabled>-->
+                  <ul class="list-group list-group-flush ">
+                    <li class="list-group-item d-flex justify-content-between bg-secondary">Quality:  <div class="foo yellow"></div></li>
+                    <li class="list-group-item d-flex justify-content-between bg-secondary">Label:<div class="foo green"></div></li>
+                    <li class="list-group-item d-flex justify-content-between bg-secondary">Planes:<div class="foo red"></div></li>
+                    <li class="list-group-item d-flex justify-content-between bg-secondary">Confidence:<div class="foo red"></div></li>
+                    <li class="list-group-item d-flex justify-content-between bg-secondary">Anomaly:<div class="foo red"></div></li>
+                  </ul>
+                </div>
+
+            </div>
+        </div>
+        <div id="desc_box" class="col-sm-5 align-self-start" >
+            <div class="card bg-secondary" >
+              <div class="card-header bg-secondary" id="headingOne">
+                <h5 class="mb-0 ">
+                  <button class="btn btn-secondary" type="button" data-toggle="collapse" id="desc_btn" data-target="#desc_div" aria-expanded="false" aria-controls="desc_div">Toggle description</button>
+                </h5>
+              </div>
+            <div class="describtion_div collapse multi-collapse " id="desc_div" style="overflow-y:scroll;max-height:5rem;" >
+            <p class="text-justify p-1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -109,12 +137,14 @@
               reprehenderit in voluptate velit esse cillum dolore eu fugiat
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum.
+
             </p>
             </div>
           </div>
-        </div>
       </div>
-
+    </div>
+  </div>
+</div>
   </div>
 
 </body>
