--- a/templates/template_5.html
+++ b/templates/template_5.html
@@ -49,6 +49,7 @@
 
         <div class="col"  id="sqr1">
 
+
         </div>
 
         <div class="col" id="sqr2">
@@ -72,8 +73,11 @@
   </div>
 
 </body>
-<script src="static/javascript/template_4.js"></script>
+<script src="static/javascript/template_5.js"></script>
+<script type="text/javascript">
 
+
+</script>
 
 
 </html>
