--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 <a href="/template_2"><button type="button" name="button">template_2</button></a>
 <a href="/template_3"><button type="button" name="button">template_3</button></a>
 <a href="/template_4"><button type="button" name="button">template_4</button></a>
+<a href="/template_5"><button type="button" name="button">template_5</button></a>
+
 
 
 <br>
