--- a/templates/template_5.html
+++ b/templates/template_5.html
@@ -39,16 +39,12 @@
 
 </head>
 <body class="bg-dark">
-  <nav class="navbar navbar-dark bg-secondary">
-    <a class="navbar-brand" href="/" onclick="disconnect()">Home</a>
-  </nav>
-  <br>
+
   <div class="container-fluid" >
 
-      <div class="row">
+      <div class="row mt-2">
 
         <div class="col"  id="sqr1">
-
 
         </div>
 
@@ -61,7 +57,6 @@
       <div class="row" >
 
         <div class="col" id="sqr3">
-
 
         </div>
 
