--- a/templates/template_5.html
+++ b/templates/template_5.html
@@ -44,11 +44,11 @@
 
       <div class="row mt-2">
 
-        <div class="col"  id="sqr1">
+        <div class="col w-50 p-3"  id="sqr1">
 
         </div>
 
-        <div class="col" id="sqr2">
+        <div class="col w-50 p-3" id="sqr2">
 
         </div>
 
@@ -56,11 +56,11 @@
 
       <div class="row" >
 
-        <div class="col" id="sqr3">
+        <div class="col w-50 p-3" id="sqr3">
 
         </div>
 
-        <div class="col" id="sqr4">
+        <div class="col w-50 p-3" id="sqr4">
 
         </div>
 
