--- a/static/CSS/Template3.css
+++ b/static/CSS/Template3.css
@@ -1,9 +1,9 @@
 .foo {
-   float: left;
-   width: 20px;
-   height: 20px;
-   margin: 5px;
-   border: 1px solid rgba(0, 0, 0, .2);
+   float: right;
+   /*width: 80px;*/
+   height: 30px;
+   margin: 0px;
+   /*border: 1px solid rgba(0, 0, 0, .2);*/
 }
 .green {
    background: #40EB16;
@@ -13,4 +13,7 @@
 }
 .yellow {
    background: #F0F00E;
+}
+.gray {
+   background: gray;
 }
