--- a/templates/template_3.html
+++ b/templates/template_3.html
@@ -57,7 +57,7 @@
     <br>
   <div class="container-fluid " >
       <div class="row">
-        <div class="col d-flex justify-content-center">
+        <div class="col border d-flex justify-content-center">
 
               <canvas id="imgCanvas" width="640px" height="480px"></canvas>
 
@@ -68,13 +68,13 @@
               <canvas id="socketCanvas" hidden></canvas>
 
         </div>
-        <div class="col ">
+        <div class="col border">
           <canvas id="canvas_draw" width="640px" height="480px"></canvas>
 
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col border">
           <div class="row">
 
 
@@ -89,7 +89,7 @@
           <!--<button type="button" id="button2" name="button2" onclick="applyMask()" >Apply Mask</button>-->
         </div>
 
-        <div class="col ">
+        <div class="col border ">
           <div class="row ">
 
 
