--- a/templates/template_5.html
+++ b/templates/template_5.html
@@ -22,7 +22,8 @@
     res_plc = {{res_plc|tojson}};
     desc_plc ={{desc_plc|tojson}};
     pln_plc = {{plane_plc|tojson}};
-    labels_index = {{lab_index|tojson}}
+    btn_plc = {{btn_plc|tojson}};
+    labels_index = {{lab_index|tojson}};
     const bgImg = new Image(); // Create new img element
     const aImg = new Image();
     const planesImg = new Image();
