--- a/templates/template_5.html
+++ b/templates/template_5.html
@@ -11,6 +11,7 @@
   <script type="text/javascript">
     btnMode = {{btnMode|tojson}};
     freezeMode = {{fMode|tojson}};
+    backgroundMode ={{backgroundMode|tojson}};
     imgBool = {{img_bool|tojson}};
     img_index = {{img_index|tojson}};
     descBool = {{desc_bool|tojson}};
@@ -66,10 +67,7 @@
 
 </body>
 <script src="static/javascript/template_5.js"></script>
-<script type="text/javascript">
 
-
-</script>
 
 
 </html>
