--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,32 @@
 <html>
 <link rel="stylesheet" href="static/CSS/style.css">
+<script src="static/javascript/jquery-3.5.1.js"></script>
+<link rel="stylesheet" href="static/CSS/fontawsome/all.css">
+<link rel="stylesheet" href="static/CSS/bootstrap/css/bootstrap.css">
+<script src="/static/CSS/bootstrap/js/bootstrap.min.js"></script>
 
 <head>
 </head>
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+	<div id = 'unauth'class="alert alert-danger text-center fs-1" role="alert">
+	        {% for category, message in messages %}
+             <p>{{ message }}</p>   
+            {% endfor %}
+	</div>
+    {% endif %}
+{% endwith %}
+<body style="background-color:#252729;margin:0;overflow-x: hidden;">
+<div class="">
 
-<body>
-<div class="container">
 
 <a href="/template_1"><button type="button" name="button">template_1</button></a>
 <a href="/template_2"><button type="button" name="button">template_2</button></a>
 <a href="/template_3"><button type="button" name="button">template_3</button></a>
 <a href="/template_4"><button type="button" name="button">template_4</button></a>
 <a href="/template_5"><button type="button" name="button">template_5</button></a>
+<a href="/logout"><button type="button" name="button">Log Out</button></a>
+
 
 
 
@@ -20,6 +35,11 @@
 
 </div>
 </body>
+<script type="text/javascript">
+	setTimeout(function() {
+		$('#unauth').alert('close');
+	},3000)
 
+</script>
 
 </html>
